apps/katib/upstream/installs/katib-with-kubeflow/istio-authorizationpolicy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: katib-ui
  namespace: kubeflow
spec:
  action: ALLOW
  selector:
    matchLabels:
      katib.kubeflow.org/component: ui
  rules:
    - from:
        - source:
            principals: 
              - "cluster.local/ns/kubeflow/sa/kubeflow-gateway-istio"
